--- a/styles.css
+++ b/styles.css
@@ -108,13 +108,14 @@ p {
   padding: 0;
   width: 300px;
   max-width: 300px;
+  height:250px;
   padding: 15px;
   background-color: white;
   border-radius: 4px;
   -webkit-box-shadow: 9px 8px 12px -1px #a3a5ae;
   box-shadow: 9px 8px 12px -1px #a3a5ae;
 }
-caption-sub {
+.caption-sub {
     font-size: 15px;
     padding-top: 0px;
     margin-top: 0px;
