--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-root {
+:root {
   --Font-size: 15px;
   --Mobile: 375px;
   --Desktop: 1440px;
@@ -9,7 +9,7 @@ root {
   --Blue: hsl(212, 86%, 64%);
 
   --Very-Dark-Blue: hsl(234, 12%, 34%);
-  --Grayish-Blue: #a3a5ae;
+  --Grayish-Blue: hsl(229, 6%, 66%);
   --Very-Light-Gray: hsl(0, 0%, 98%);
 }
 body {
@@ -64,7 +64,6 @@ p {
   font-size: 15px;
   margin: 2px 0 30px 0;
   padding: 2px 0;
-  
 }
 #main {
   width: auto auto;
@@ -101,6 +100,18 @@ p {
   margin: 0;
   padding: 0;
 }
+#card-supervisor {
+  border-top: 3px solid var(--Cyan);
+}
+#card-builder {
+  border-top: 3px solid var(--Red);
+}
+#card-karma {
+  border-top: 3px solid var(--Orange);
+}
+#card-calculator {
+  border-top: 3px solid var(--Blue);
+}
 .cards {
   display: flex;
   flex-direction: column;
@@ -108,7 +119,7 @@ p {
   padding: 0;
   width: 300px;
   max-width: 300px;
-  height:250px;
+  height: 250px;
   padding: 15px;
   background-color: white;
   border-radius: 4px;
@@ -116,31 +127,19 @@ p {
   box-shadow: 9px 8px 12px -1px #a3a5ae;
 }
 .caption-sub {
-    font-size: 15px;
-    padding-top: 0px;
-    margin-top: 0px;
-    margin-right: 15px;
+  font-size: 15px;
+  padding-top: 0px;
+  margin-top: 0px;
+  margin-right: 15px;
   text-align: justify;
 }
 .icon {
   margin: 5px;
   position: relative;
-  width: 70px; 
-  height: 70px; 
-  left: 200px; 
+  width: 70px;
+  height: 70px;
+  left: 200px;
   bottom: -50px;
-}
-#card-supervisor {
-  border-top: solid 3px var(--Cyan);
-}
-#card-builder {
-  border-top: solid 3px var(--Red);
-}
-#card-karma {
-  border-top: solid 3px var(--Orange);
-}
-#card-calculator {
-  border-top: solid 3px var(--Blue);
 }
 
 .attribution {
